<resources>
    <string name="app_name">Recipe Vault</string>
    <string name="recipe_list_screen_title">What do you want to cook today?</string>
    <string name="no_recipe_found">"No recipes found. Try adding some!"</string>
    <string name="error_message">"Error message"</string>
    <string name="cook_time">"Cook Time: %s"</string>
    <string name="prep_time">"Prep Time: %s"</string>
    <string name="ingredient_format_with_max">• %s-%s %s %s</string>
    <string name="ingredient_format_without_max">• %s %s %s</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="add_recipe_name">Recipe name</string>
    <string name="add_recipe_description">Description (optional)</string>
    <string name="add_recipe_upload_recipe_image">Upload a recipe image</string>
    <string name="cook_time_in_minutes">"Cooking Time (in minutes)"</string>
    <string name="prep_time_in_minutes">"Preparation Time (in minutes)"</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="submit">Submit Recipe</string>
    <string name="servings_people">Servings (people)</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="meal_type">Meal Type</string>
    <string name="cuisine">Cuisine</string>
    <!-- Dialog titles -->
    <string name="select_difficulty_level">Select Difficulty Level</string>
    <string name="select_meal_type">Select Meal Type</string>
    <string name="select_cuisine">Select Cuisine</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_hint">Qty or Qty-Max</string>
    <string name="unit">Unit</string>
    <string name="remove">Remove</string>
    <string name="select_unit">Select Unit</string>
    <string name="method_add_step">Add steps</string>
    <string name="method_add_step_hint">Step %d</string>
    <string name="close">Close</string>
    <string name="capture">Capture</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="label_ingredients">INGREDIENTS</string>
    <string name="label_method">METHOD</string>
</resources>