<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addRecipeNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_recipe_name"
        android:layout_marginBottom="16dp"
        style="@style/AppTextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTextInputEditText"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Add this new description field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addRecipeDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_recipe_description"
        android:layout_marginBottom="16dp"
        style="@style/AppTextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addRecipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTextInputEditText"
            android:inputType="textMultiLine"
            android:maxLines="5"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addRecipeCookTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cook_time_in_minutes"
        android:layout_marginBottom="16dp"
        style="@style/AppTextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addRecipeCookTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTextInputEditText"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addRecipePrepTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prep_time_in_minutes"
        android:layout_marginBottom="16dp"
        style="@style/AppTextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addRecipePrepTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTextInputEditText"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>


