<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addRecipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryContainer">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addRecipeToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_collapseMode="pin"
        app:title="@string/add_recipe"
        app:titleTextColor="@color/colorOnPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_icon"/>
    <!-- Main Content inside NestedScrollView -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/addRecipeScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp" >

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/stepsViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />

            <LinearLayout
                android:id="@+id/bottomBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginTop="16dp"
                android:weightSum="3"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/back"
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/next"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/submit"
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>