<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shareRoot"
    android:layout_width="500dp"
    android:layout_height="400dp"
    android:padding="0dp"
    android:background="@android:color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/shareCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="false"
        app:cardPreventCornerOverlap="true"
        app:cardBackgroundColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/shareRecipeThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/share_recipe"
                    android:scaleType="centerCrop"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#4D000000" />
            </FrameLayout>

            <!-- Text content area -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:id="@+id/shareRecipeTitle"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <!-- Short description / subtitle -->
                    <TextView
                        android:id="@+id/shareRecipeDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@android:color/black" />


                    <!-- INGREDIENTS heading -->
                    <TextView
                        android:id="@+id/shareRecipeIngredientsHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/label_ingredients"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />

                    <!-- INGREDIENTS body -->
                    <LinearLayout
                        android:id="@+id/shareRecipeIngredientsColumns"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="4dp">

                        <TextView
                            android:id="@+id/shareRecipeIngredientsColumnStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="12dp"
                            android:textSize="12sp"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/shareRecipeIngredientsColumnEnd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            style="@style/TextAppearance.MaterialComponents.Body2"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                    <!-- METHOD heading -->
                    <TextView
                        android:id="@+id/shareRecipeMethodHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/label_method"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />

                    <!-- METHOD body -->
                    <TextView
                        android:id="@+id/shareRecipeMethod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_marginTop="4dp"
                        android:textColor="@android:color/black" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>